Fixed broken style on chat panel

--- a/src/components/PriviMetaverse/components/Message/MessageBox.css
+++ b/src/components/PriviMetaverse/components/Message/MessageBox.css
@@ -104,6 +104,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .message-content.mobile {
@@ -252,11 +253,9 @@
 
 .item-list-container {
   overflow-y: auto;
-  margin: 0 13px 0 25px;
-  padding: 20px 0;
+  margin: 20px 13px 20px 25px;
   padding-right: 12px;
   flex: 1;
-  max-height: 30vh;
   max-width: 398px;
 }
 .item-list-container::-webkit-scrollbar {
